style: fix overflow by adding wordbreak

--- a/src/pages/Error/Error.module.scss
+++ b/src/pages/Error/Error.module.scss
@@ -17,6 +17,7 @@
 
 .heading {
   font-size: 72px;
+  line-height: 1;
   font-weight: 500;
 }
 
