--- a/src/pages/PrivacyPolicy/PrivacyPolicy.module.scss
+++ b/src/pages/PrivacyPolicy/PrivacyPolicy.module.scss
@@ -6,6 +6,24 @@
  *
  * -------------------------------- */
 
+ .wordbreak {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+ }
+
 .main {
   display: flex;
   flex-direction: column;
@@ -16,15 +34,12 @@
 
 .article {
   max-width: 720px;
-  box-sizing: border-box;
-  .heading, h2, h3 {
-    word-wrap: break-word;
-  }
-
+  @extend .wordbreak;
 }
 
 .heading {
   font-size: 72px;
+  line-height: 1;
   font-weight: 500;
 }
 
